<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edittext_rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_edittext_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/activity_main_edittext_email_hint"
                    android:inputType="text"
                    android:lineSpacingExtra="5sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/edittext_rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_edittext_name"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_person"
                    android:drawablePadding="8dp"
                    android:hint="@string/activity_main_edittext_name_hint"
                    android:inputType="text"
                    android:lineSpacingExtra="5sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <Spinner
                android:id="@+id/activity_main_spinner_city"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="24dp"
                android:hint="@string/activity_main_spinner_selectcity_hint"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginHorizontal="20dp"
                android:background="@drawable/edittext_rounded"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/activity_main_edittext_date_of_birth"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawablePadding="8dp"
                    android:hint="@string/activity_main_edittext_dateofbirth_hint"
                    android:lineSpacingExtra="5sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:textSize="16sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/activity_main_button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@color/teal_200"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/activity_main_button_save_text"/>
        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>